<resources>
    <string name="app_name">CrazyTipCalc</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.0</string>

    <string name="tip_text_view">Tip</string>
    <string name="tip_edit_text">.15</string>

    <string name="final_text_view">Final Bill</string>
    <string name="final_bill_edit_text">.15</string>

    <string name="change_tip_text_view">Tip</string>

    <string name="introduction_text_view">Introduction</string>
    <string name="intro_friendly_text_view">Friendly</string>
    <string name="intro_specials_text_view">Specials</string>
    <string name="intro_opinion_text_view">Opinions</string>

    <string name="avaliability_text_view">Avaliability</string>
    <string name="avaliable_bad_radiobutton">Bad</string>
    <string name="avaliable_ok_radiobutton">Ok</string>
    <string name="avaliable_good_radiobutton">Good</string>

    <!-- Time Waiting Options -->
    <string name="time_waiting_text_view">Time Waiting</string>
    <string name="start_chronometer_button">Start</string>
    <string name="pause_chronometer_button">Pause</string>
    <string name="reset_chronometer_button">Reset</string>
    <!-- Spinner Options -->
    <string-array name="Problem_solving">
        <item>Problem Solving</item>
        <item>Bad</item>
        <item>Ok</item>
        <item>Good</item>
    </string-array>
</resources>
