<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CrazyTipCalc"
    android:id="@+id/introTextView"
    android:transitionGroup="true">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_text_view"
        android:id="@+id/billTextView"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billEditText"
        android:ems="5"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/billTextView"
        android:layout_toEndOf="@+id/billTextView"
        android:phoneNumber="false"
        android:text="@string/bill_edit_text"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_text_view"
        android:id="@+id/tipTextView"
        android:layout_alignBottom="@+id/billTextView"
        android:layout_toRightOf="@+id/billEditText"
        android:layout_toEndOf="@+id/billEditText"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipEditText"
        android:layout_alignBottom="@+id/billEditText"
        android:layout_toRightOf="@+id/tipTextView"
        android:layout_toEndOf="@+id/tipTextView"
        android:ems="4"
        android:text="@string/tip_edit_text"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_text_view"
        android:id="@+id/finalBill"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/tipEditText"
        android:layout_alignLeft="@+id/tipTextView"
        android:layout_alignStart="@+id/tipTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalBillEditText"
        android:ems="5"
        android:inputType="numberDecimal"
        android:layout_below="@+id/finalBill"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_tip_text_view"
        android:id="@+id/changeTipTextView"
        android:layout_alignTop="@+id/finalBill"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeTipSeekBar"
        android:layout_alignBottom="@+id/finalBillEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/finalBillEditText"
        android:progress="15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction_text_view"
        android:id="@+id/introTextView"
        android:layout_below="@+id/changeTipSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_friendly_text_view"
        android:id="@+id/friendlyCheckBox"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/introTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_specials_text_view"
        android:id="@+id/specialsCheckBox"
        android:layout_below="@+id/introTextView"
        android:layout_toRightOf="@+id/changeTipSeekBar"
        android:layout_toEndOf="@+id/changeTipSeekBar" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_opinion_text_view"
        android:id="@+id/opinionsCheckBox"
        android:layout_below="@+id/introTextView"
        android:layout_toRightOf="@+id/finalBillEditText"
        android:layout_toEndOf="@+id/finalBillEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avaliability_text_view"
        android:id="@+id/avaliableTextView"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/avaliableRadioGroup"
        android:layout_below="@+id/avaliableTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avaliable_bad_radiobutton"
            android:id="@+id/avaliableBadRadio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avaliable_good_radiobutton"
            android:id="@+id/avaliableGoodRadio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avaliable_ok_radiobutton"
            android:id="@+id/avaliableRadioOk"
            android:layout_alignTop="@+id/avaliableRadioGroup"
            android:layout_toRightOf="@+id/avaliableRadioGroup"
            android:layout_toEndOf="@+id/avaliableRadioGroup" />

    </RadioGroup>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/problemsSpinner"
        android:layout_below="@+id/avaliableRadioGroup"

        android:layout_alignRight="@+id/opinionsCheckBox"
        android:layout_alignEnd="@+id/opinionsCheckBox"
        android:entries="@array/Problem_solving"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time_waiting_text_view"
        android:id="@+id/timeWaitingTextView"
        android:layout_below="@+id/problemsSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeWaitingChronometer"
        android:layout_below="@+id/problemsSpinner"
        android:layout_alignLeft="@+id/finalBill"
        android:layout_alignStart="@+id/finalBill" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_chronometer_button"
        android:id="@+id/startButton"
        android:layout_below="@+id/timeWaitingTextView"
        android:layout_alignRight="@+id/introTextView"
        android:layout_alignEnd="@+id/introTextView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_chronometer_button"
        android:id="@+id/pauseButton"
        android:layout_alignTop="@+id/startButton"
        android:layout_toRightOf="@+id/timeWaitingTextView"
        android:layout_toEndOf="@+id/timeWaitingTextView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_chronometer_button"
        android:id="@+id/resetButton"
        android:layout_below="@+id/timeWaitingTextView"
        android:layout_toRightOf="@+id/specialsCheckBox"
        android:layout_toEndOf="@+id/specialsCheckBox" />

</RelativeLayout>
